--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
    <style>
         body{
-            background-image: url(./image/4.png);
+            background-image: url(./4.png);
             background-size:cover;
         }
         .parentDiv{
