--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
     <form id="form1" runat="server">
         <div>
-            <asp:HyperLink ID="HyperLink1" class="HyperLink1" runat="server" ForeColor="White">请输入你要殴打的人的姓名：</asp:HyperLink>
+            <a>请输入你要殴打的人的姓名：</a>
             <asp:TextBox ID="TextBox1" runat="server" Width="111px"></asp:TextBox>
             <asp:Button ID="Button1"  class="button1" runat="server" Text="开始殴打" ForeColor="#804000" BorderColor="#804000" OnClick="Button1_Click"/>
             <asp:Label ID="Label1" runat="server" ForeColor="White"></asp:Label>
