--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>殴打啊黄网</title>
+    <link rel="shortcut icon" href=".\image\log.png">
 </head>
 <body>
    <style>
