--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>殴打啊黄网</title>
-    <link rel="shortcut icon" href=".\image\logo.jpg">
+    <link rel="shortcut icon" href="./image/logo.jpg">
 </head>
 <body>
    <style>
