--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -6,31 +7,29 @@
     <link rel="shortcut icon" href="./image/logo.jpg">
 </head>
 <body>
-   <style>
-        body{
-            background-image: url(./image/baack.png);
-            background-size:cover;
+    <script src="index.js"></script>
+    <style>
+        body {
+            background-image: url(./image/back.png);
+            background-size: cover;
         }
-        .parentDiv{
-            position:relative;
+
+        a {
+            color: #fff;
         }
-        .div1{
-            position:absolute;
-            z-index:1;
-        }
-        .div2{
-            position:absolute;
-            top: 10px;
-            z-index:2;
-        }
-        .button1{
-	        background:transparent;	/*按钮背景透明*/
+
+        #button1 {
+            background: transparent; /*按钮背景透明*/
+            border-color: antiquewhite;
+            color: #803838;
         }
     </style>
     <form id="form1">
         <div>
             <a>请输入你要殴打的人的姓名：</a>
-            <input id="Text1" type="text" />
+            <input id="text1" type="text" value="" />
+            <input id="button1" type="button" value="确定殴打" onclick="confirm()" />
+            <a id="a1"></a>
         </div>
     </form>
 </body>
