--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./image/logo.jpg">
 </head>
 <body>
-    <script src="index.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
     <style>
         body {
             background-image: url(./image/back.png);
