--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="shortcut icon" href="./image/logo.jpg">
 </head>
 <body>
-    <script type="text/javascript" src="./index.js"></script>
     <style>
         body {
             background-image: url(./image/back.png);
@@ -24,13 +23,45 @@
             color: #803838;
         }
     </style>
-    <form id="form1">
-        <div>
-            <a>请输入你要殴打的人的姓名：</a>
-            <input id="text1" type="text" value="" />
-            <input id="button1" type="button" value="确定殴打" onclick="confirm()" />
-            <a id="a1"></a>
-        </div>
-    </form>
+    <a>请输入你要殴打的人的姓名：</a>
+    <input id="input1" type="text" placeholder="请输入要殴打人的姓名"/> 
+    <input id="button1" type="button" value="确定殴打" onclick="confirm()" />
+    <a id="a1"></a>
+
+    <script>
+        //获取本地时间 年-月-日
+        function time() {
+            let nowDate = new Date();
+            let year = nowDate.getFullYear();
+            let month = nowDate.getMonth() + 1 < 10 ? "0" + (nowDate.getMonth() + 1)
+                : nowDate.getMonth() + 1;
+            let day = nowDate.getDate() < 10 ? "0" + nowDate.getDate() : nowDate
+                .getDate();
+            this.datetime = year + "-" + month + "-" + day;
+            return this.datetime;
+        }
+
+        function confirm() {
+            var name = document.getElementById("input1").value;
+            var nameLength = name.length;
+            if (name == "")
+                document.getElementById("a1").innerHTML = "快点！必须殴打一个人！";
+            else
+                if (nameLength > 6)
+                    document.getElementById("a1").innerHTML = "名字太长懒得打！";
+                else
+                    if (name == "唐涛")
+                        if (time() == "2022-11-09")
+                            //跳转
+                            return 0;
+                        else
+                            document.getElementById("a1").innerHTML = "作者不给你打并反手给了你一个大逼斗！";
+                    else
+                        //跳转
+                        return 0;
+
+        }
+
+    </script>
 </body>
 </html>
