--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
     <body>
       <input id="input1" type="text" placeholder="请输入暗号"/>
+      <input id="button1" type="button" value="确定" onclick="confirm()" />
       <script>
+          function confirm() {
+              window.location.replace('dateName.html');
+          }
       </script>
     </body>
  </html>
