--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <input id="button1" type="button" value="确定" onclick="confirm()" />
       <script>
           function confirm() {
-              window.location.replace('dateName.html');
+              window.location.href="dataName.html";
           }
       </script>
     </body>
