--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="utf-8" />
     <title>殴打网</title>
 </head>
-    <body>
-      <input id="input1" type="text" placeholder="请输入暗号"/>
-      <input id="button1" type="button" value="确定" onclick="confirm()" />
-      <script>
-          function confirm() {
-              window.location.href="dataName.html";
+<body>
+    <input id="input1" type="text" placeholder="请输入暗号"/>
+    <input id="button1" type="button" value="确定" onclick="confirm()" />
+    <a id="a1" >< /a>
+    <script>
+        function confirm() {
+            ver cipher = document.getElementById("input1").value;
+            ver text = document.getElementById("input1").value;
+            if(cipher == "10.16")
+                window.location.href="dataName.html";
+            else
+                text = "连暗号都不知道就别来了";
+                  
           }
       </script>
     </body>
