--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script>
         function confirm() {
             ver cipher = document.getElementById("input1").value;
-            ver text = document.getElementById("input1").value;
+            ver text = document.getElementById("a1").value;
             if(cipher == "10.16")
                 window.location.href="dataName.html";
             else
