--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <a id="a1" ></a>
     <script>
         function confirm() {
-            ver cipher = document.getElementById("input1").value;
-            ver text = document.getElementById("a1").value;
+            var cipher = document.getElementById("input1").value;
+            var text = document.getElementById("a1").value;
             if(cipher == "10.16")
                 window.location.href="dataName.html";
             else
