--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>殴打网</title>
 </head>
 <body>
+    <style>
+        a {
+            color: #000;
+        }
+    </style>
     <input id="input1" type="text" placeholder="请输入暗号"/>
     <input id="button1" type="button" value="确定" onclick="confirm()" />
     <a id="a1" ></a>
