--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             if(cipher == "10.16")
                 window.location.href="dataName.html";
             else
-                document.getElementById("a1").value = "连暗号都不知道就别来了";
+                document.getElementById("a1").innerHTML = "连暗号都不知道就别来了";
                   
           }
       </script>
