--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <title>殴打网</title>
-</head>
-<body>
-    <style>
-        a {
-            color: #000;
-        }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style type="text/css">
     </style>
-    <input id="input1" type="text" placeholder="请输入暗号"/>
-    <input id="button1" type="button" value="确定" onclick="confirm()" />
-    <a id="a1" ></a>
-    <script>
-        function confirm() {
-            var cipher = document.getElementById("input1").value;
-            if(cipher == "10.16")
-                window.location.href="dataName.html";
-            else
-                document.getElementById("a1").innerHTML = "连暗号都不知道就别来了";
-                  
-          }
-      </script>
-    </body>
- </html>
-  
+</head>
+
+<body>
+    <div id="b1"></div>
+    <script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript">
+		window.onload=function(){
+			var ServiceId = getUrlParam("id");
+			$("#bi").val(ServiceId);
+		}
+		
+	</script>
+</body>
+
+</html>
