--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript">
 		window.onload=function(){
 			var ServiceId = getUrlParam("id");
-			$("#bi").val(ServiceId);
+			$("#b1").val(ServiceId);
 		}
 		
 	</script>
