--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
     <script type="text/javascript">
 		window.onload=function(){
-			var ServiceId = getUrlParam("id");
+			var ServiceId = $.jqURL.get(“id);
 			$("#b1").val(ServiceId);
 		}
 		
