--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
     <script type="text/javascript">
 		window.onload=function(){
-			var ServiceId = $.jqURL.get("id");
-			$("#b1").val(ServiceId);
+			var search = window.location.search;
+			var id = getSearchString('id', search);
+			$("#b1").val(id);
 		}
 		
 	</script>
