--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <script type="text/javascript">
 		window.onload=function(){
 			var search = window.location.search;
-			var id = getSearchString('id', search);
-			$("#b1").val(id);
+			
+			$("#b1").val(search);
 		}
 		
 	</script>
