--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript">
 		window.onload=function(){
 			var search = window.location.search;
-			
+			alert(search);
 			$("#b1").val(search);
 		}
 		
