--- a/index.html
+++ b/index.html
@@ -10,16 +10,7 @@
 </head>
 
 <body>
-    <div id="b1"></div>
-    <script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript">
-		window.onload=function(){
-			var search = window.location.search;
-			alert(search);
-			$("#b1").val(search);
-		}
-		
-	</script>
+    <audio src="music/古风—音效—琵琶和笛子.mp3" controls></audio>
 </body>
 
 </html>
