--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <audio autoplay="autoplay" loop="loop" preload="auto" src="music/古风—音效—琵琶和笛子.mp3"></audio>
+    <audio autoplay="autoplay" loop="loop" preload="auto" src="音乐/古风—音效—琵琶和笛子.mp3"></audio>
 </body>
 
 </html>
