--- a/index.html
+++ b/index.html
@@ -3,52 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Hello world!</title>
-    <style type="text/css">
-	*{
-		padding: 0;
-		margin: 0 auto;
-	}
-    #container{
-        /*地图(容器)显示大小*/
-        width:100vw;
-        height:100vh;
-    }
-	.div_map{
-		background-color: black;
-	}
-	.img_map{
-		width: 30vw;
-	}
-    </style>
-    <!--引入Javascript API GL，参数说明参见下文-->
-    <script src="https://map.qq.com/api/gljs?v=1.exp&key=OB4BZ-D4W3U-B7VVO-4PJWW-6TKDJ-WPB77"></script>
-    <script>
-        //地图初始化函数，本例取名为init，开发者可根据实际情况定义
-        function initMap() {
-            //定义地图中心点坐标
-            var center = new TMap.LatLng(26.898583,112.587875)
-            //定义map变量，调用 TMap.Map() 构造函数创建地图
-            var map = new TMap.Map(document.getElementById('container'), {
-                center: center,//设置地图中心点坐标
-                zoom: 19,   //设置地图缩放级别
-                pitch: 43.5,  //设置俯仰角
-                rotation: 0    ,//设置地图旋转角度
-				mapStyleId: 'style2'//设置地图样式
-            });
-			var infoWindowLocation = new TMap.LatLng(26.898583,112.587875);//创建一个坐标
-			//创建InfoWindow实例，并进行初始化
-			var infoWindow = new TMap.InfoWindow({
-			    map: map,
-			    position: center,
-			    //设置infoWindow，content支持直接传入html代码，以实现各类内容格式需求
-			    content: "<div clss='div_map'><img class='img_map' src='./image/QQ图片20230303103329.jpg'><p>南华大学第一教学楼(简称一教)</p></div>"
-			});
-        }
-    </script>
 </head>
-<!-- 页面载入后，调用init函数 -->
-<body onload="initMap()">
-    <!-- 定义地图显示容器 -->
-    <div id="container"></div>
+<body>
+    hi
 </body>
 </html>
