--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Hello world!</title>
+    <title>My GitHub Page</title>
 </head>
 <body>
-    hi
+    <h1>Hello, World!</h1>
+    <p>Welcome to my GitHub Pages site.</p>
 </body>
 </html>
