--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>这个页面将在加载时自动播放背景音乐。</p>
  
     <!-- 使用audio标签并设置autoplay属性 -->
-    <audio id="background-music" src="your-music-file.mp3" autoplay loop>
+    <audio id="background-music" src="音乐/卫兰 - 一格格.mp3" autoplay loop>
         您的浏览器不支持audio标签。
     </audio>
  
