--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script>
         // JavaScript代码，确保在某些浏览器中也能自动播放（现代浏览器大多已经支持autoplay）
         window.addEventListener('load', function() {
-            var audio = document.getElementById('background-music');
+            var audio = document.getElementById('音乐/卫兰 - 一格格.mp3');
             audio.play().catch(error => {
                 console.log('自动播放被阻止，请确保浏览器未禁用自动播放或手动播放音乐。', error);
             });
