--- a/index.html
+++ b/index.html
@@ -3,26 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		    <title>个人博客</title>
+		    <title>"晴天"</title>
 		    <link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-		<h1>欢迎来到我的网站</h1>
-    <p>这个页面将在加载时自动播放背景音乐。</p>
- 
-    <!-- 使用audio标签并设置autoplay属性 -->
-    <audio id="background-music" src="音乐/卫兰 - 一格格.mp3" autoplay loop>
-        您的浏览器不支持audio标签。
-    </audio>
- 
-    <script>
-        // JavaScript代码，确保在某些浏览器中也能自动播放（现代浏览器大多已经支持autoplay）
-        window.addEventListener('load', function() {
-            var audio = document.getElementById('音乐/卫兰 - 一格格.mp3');
-            audio.play().catch(error => {
-                console.log('自动播放被阻止，请确保浏览器未禁用自动播放或手动播放音乐。', error);
-            });
-        });
-    </script>
+		<h1>故事的最后还是说了拜！</h1>
 	</body>
 </html>
